package com.anmory;

/**
 * @author Anmory/李梦杰
 * @description TODO
 * @date 2025-04-28 下午4:00
 */

public abstract class LateReason{
    public abstract void getLateReason();
}
