package com.anmory;

/**
 * @author Anmory/李梦杰
 * @description TODO
 * @date 2025-04-28 下午3:51
 */

public class ToiletReason extends LateReason{
    @Override
    public void getLateReason() {
        System.out.println("去厕所迟到");
    }
}
